--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -4,6 +4,7 @@
   "description": "snapchat: An Ionic project",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cordova": "^6.3.1",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "gulp": "^3.5.6",
