--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -13,7 +13,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "massive": "^2.5.0"
+    "massive": "^2.5.0",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
