--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -13,6 +13,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "jwt-simple": "^0.5.0",
     "massive": "^2.5.0"
   },
   "devDependencies": {
