--- a/snapchap/.gitignore
+++ b/snapchap/.gitignore
@@ -8,5 +8,6 @@ www/lib/
 
 .DS_Store
 ../node_modules/                                                                                                                       
-../sockets/                                                                                                                            
+../sockets/   
+config.js/                                                                                                                         
                       
