--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-node_modules/                                                                                                                          
-sockets/ 
+node_modules/
+sockets/
+config.js
