--- a/snapchap/bower.json
+++ b/snapchap/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
+    "signature_pad": "^1.5.3"
   }
 }
