--- a/snapchap/.gitignore
+++ b/snapchap/.gitignore
@@ -1,5 +1,5 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-
-
+config.js
+credentials.js
