--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -20,6 +20,9 @@
     "s3fs": "git+https://github.com/RiptideElements/s3fs.git",
     "socket.io": "^1.5.1"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
