--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -4,7 +4,7 @@
   "description": "snapchat: An Ionic project",
   "scripts": {
     "start": "node server.js",
-    "heroku-prebuild": "npm i"
+    "postinstall": "bower install && npm i && gulp"
   },
   "engine": {
     "node": "6.8.0"
@@ -25,9 +25,7 @@
     "massive": "^2.5.0",
     "moment": "^2.15.2",
     "s3fs": "git+https://github.com/RiptideElements/s3fs.git",
-    "socket.io": "^1.5.1"
-  },
-  "devDependencies": {
+    "socket.io": "^1.5.1",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
