--- a/snapchap/package.json
+++ b/snapchap/package.json
@@ -10,26 +10,27 @@
     "node": "6.8.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.6.12",
+    "aws-sdk": "^2.6.15",
     "body-parser": "^1.15.2",
-    "bower": "^1.7.9",
+    "bower": "^1.3.3",
+    "connect-multiparty": "^2.0.0",
     "cordova": "^6.3.1",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-util": "^2.2.14",
     "jwt-simple": "^0.5.0",
     "massive": "^2.5.0",
     "moment": "^2.15.2",
     "pg": "6.1.0",
     "s3fs": "git+https://github.com/RiptideElements/s3fs.git",
-    "socket.io": "^1.5.1",
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "socket.io": "^1.5.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
